--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,7 @@
 <app-nav></app-nav>
 <app-hero></app-hero>
+<app-me></app-me>
+<app-experience></app-experience>
+<app-works></app-works>
+<app-skills></app-skills>
 
