--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="back-img" style="max-width: 100%;height: 100%; margin: 0 auto;" class="d-flex align-items-center justify-content-center">
     <div class="logo">
       <img class="animate__animated animate__wobble" src="../../assets/img/1.png" alt="">
-      <button> <a href="Rosario">Cliccami</a> </button>
+      <button style="background-color: transparent; border: none;"> <a href="Rosario" style="text-decoration: none;" class="fw-bold">Andiamo <i class="fa-solid fa-arrow-right"></i></a></button>
     </div>
   </div>
 </section>
