--- a/src/app/me/me.component.html
+++ b/src/app/me/me.component.html
@@ -1,1 +1,33 @@
-<p id="me">me works!</p>
+<section class="container d-flex justify-content-between align-items-center" style="margin-top: 150px;">
+  <div>
+    <div class="align-items-center justify-content-center"><img src="../../assets/img/2.png" alt="" width="90" height="90"> <span style="margin-left: 60px;" class="fs-2 fw-bold">About</span></div>
+    <div style="max-width: 490px; margin-top: 50px;">
+      <p>
+        La voglia di mettermi alla prova e la fame di conoscenza mi ha portato a stravolgere completamente la mia vita.
+        Ho sempre pensato che per raggiungere i propri obbiettivi servono 3 fattori chiave:</p>
+        <ol>
+          <li>Curiositas = <b>Fame di conoscenza</b></li>
+          <li>Coraggio = <b>Mai aver paura</b> </li>
+          <li>Un pizzico di follia = <b>Senza quella il mondo è troppo grigio</b></li>
+        </ol>
+      <p>
+        La mia carriera inizia come Tecnologo Alimentare, mi vede fondare un azienda di consulenza e successivamente ideare un idea di Web App
+        per la gestione del comparto. Da li è amore puro per la programmazione  e per il mondo tech, mi ci butto a capo fitto, e affronto
+        percorso formativi altamente professionalizzanti. Ad oggi quel pizzico di follia fa si che io riesca a sviluppare in autonomia siti WEB
+        (come questa Landing) e mi sta portando verso una nuova vita e na nuova carriera.
+      </p>
+    </div>
+  </div>
+  <div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
+  </div>
+</section>
