--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar fixed-top">
   <div class="container">
     <div>
       <a class="navbar-brand" href="#">
@@ -14,6 +14,7 @@
       <ul class="d-flex justify-content-between" style="list-style-type: none;">
         <li><a class="p-2 fs-2 link" href="me">ABOUT</a></li>
         <li><a class="p-2 fs-2 link" href="lavori">EXPERIENCE</a></li>
+        <li><a class="p-2 fs-2 link" href="lavori">WORKS</a></li>
         <li><a class="p-2 fs-2 link" href="skills">SKILLS</a></li>
         <li><a class="p-2 fs-2 link" href="contatti">CONTACT</a></li>
       </ul>
@@ -26,6 +27,7 @@
       <ul class="dropdown-menu" style="border: none">
         <li><a class="dropdown-item link fs-3" href="#">ABOUT</a></li>
         <li><a class="dropdown-item link fs-3" href="#">EXPERIENCE</a></li>
+        <li><a class="p-2 fs-2 link" href="lavori">WORKS</a></li>
         <li><a class="dropdown-item link fs-3" href="#">SKILLS</a></li>
         <li><a class="dropdown-item link fs-3" href="#">CONTACT</a></li>
         <li>
