--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -6,16 +6,16 @@
       </a>
     </div>
     <div class="social">
-      <a href=""><i class="p-2 fs-2 fa-brands fa-github"></i></a>
-      <a href=""><i class="p-2 fs-2 fa-brands fa-linkedin"></i></a>
-      <a href=""><i class="p-2 fs-2 fa-brands fa-instagram"></i></a>
+      <a href="https://github.com/RosarioNici" target="_blank"><i class="p-2 fs-2 fa-brands fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/rosario-nici/" target="_blank"><i class="p-2 fs-2 fa-brands fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/rosarionici/" target="_blank"><i class="p-2 fs-2 fa-brands fa-instagram"></i></a>
     </div>
     <div class="links">
       <ul class="d-flex justify-content-between" style="list-style-type: none;">
         <li><a class="p-2 fs-2 link" href="me">ABOUT</a></li>
         <li><a class="p-2 fs-2 link" href="lavori">EXPERIENCE</a></li>
         <li><a class="p-2 fs-2 link" href="lavori">WORKS</a></li>
-        <li><a class="p-2 fs-2 link" href="skills">SKILLS</a></li>
+        <li><a class="p-2 fs-2 link" routerLink="skills" routerLinkActive="active" >SKILLS</a></li>
         <li><a class="p-2 fs-2 link" href="contatti">CONTACT</a></li>
       </ul>
     </div>
@@ -27,13 +27,13 @@
       <ul class="dropdown-menu" style="border: none">
         <li><a class="dropdown-item link fs-3" href="#">ABOUT</a></li>
         <li><a class="dropdown-item link fs-3" href="#">EXPERIENCE</a></li>
-        <li><a class="p-2 fs-2 link" href="lavori">WORKS</a></li>
+        <li><a class="dropdown-item link fs-3" href="#">WORKS</a></li>
         <li><a class="dropdown-item link fs-3" href="#">SKILLS</a></li>
         <li><a class="dropdown-item link fs-3" href="#">CONTACT</a></li>
         <li>
-          <a class="dropdown-item link fs-3" href=""><i class="p-2 fs-2 fa-brands fa-github"></i> GitHub</a>
-          <a class="dropdown-item link fs-3" href=""><i class="p-2 fs-2 fa-brands fa-linkedin"></i> Linkedin</a>
-          <a class="dropdown-item link fs-3" href=""><i class="p-2 fs-2 fa-brands fa-instagram"></i> Instagram</a>
+          <a class="dropdown-item link fs-3" href="https://github.com/RosarioNici" target="_blank"><i class="p-2 fs-2 fa-brands fa-github"></i> GitHub</a>
+          <a class="dropdown-item link fs-3" href="https://www.linkedin.com/in/rosario-nici/" target="_blank"><i class="p-2 fs-2 fa-brands fa-linkedin"></i> Linkedin</a>
+          <a class="dropdown-item link fs-3" href="https://www.instagram.com/rosarionici/" target="_blank"><i class="p-2 fs-2 fa-brands fa-instagram"></i> Instagram</a>
         </li>
       </ul>
     </div>
