--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,4 +4,5 @@
 <app-experience></app-experience>
 <app-works></app-works>
 <app-skills></app-skills>
-
+<app-contacts></app-contacts>
+<app-footer></app-footer>
