--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,17 +1,21 @@
 <section class="container" style="margin-top: 70px;">
   <div><h1>Experience</h1></div>
   <div class="card" style="border: none; margin-top: 50px;">
-    <div class="align-items-center text-end" style="border: none;">
-      <div class="card-header" style="border: none; color: orange; background-color: transparent;">
-        <h3>2019/2021</h3>
+    <div class=" align-items-center text-end" style="border: none;">
+      <div class="card-header" style="border: none; color: #028021; background-color: transparent;">
+        <h3>2022/2023</h3>
       </div>
-      <div style="background-color: orange; height: 100%; color: white;" class="fs-2 fw-bold p-3">
-        <i class="fa-sharp fa-solid fa-shield"></i> <span class="mx-3">Ladisa Srl</span>
+      <div style="background-color: #028021; height: 100%; color: white;" class="fs-2 fw-bold p-3">
+        <i class="fa-solid fa-code"></i> <span class="mx-3">Boolean</span>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Responsabile Food Safety</h5>
-        <p class="card-text">Gestione operativa del comparto Sicurezza alimentare e Controllo
-        Qualità.</p>
+        <h5 class="card-title">Jr Full Stack Developer Trainee</h5>
+        <p class="card-text">Il corso intensivo di Boolean della durata di 6 mesi mi ha consentito di
+          mettermi alla prova e di imparare ad utilizzare vari linguaggi di
+          programmazione sviluppando vari progetti come <b>Spotify Web</b> ,
+          <b>Netflix</b> , <b>Whatsapp Web</b> , il sito internet <b>Gliziidisicilia.com</b> ed altre,
+          visualizzabili sul mio GitHub..
+        </p>
 
       </div>
     </div>
@@ -35,24 +39,21 @@
       </div>
     </div>
   </div>
-
   <div class="card" style="border: none; margin-top: 50px;">
-    <div class=" align-items-center text-end" style="border: none;">
-      <div class="card-header" style="border: none; color: #028021; background-color: transparent;">
-        <h3>2022/2023</h3>
+    <div class="align-items-center text-end" style="border: none;">
+      <div class="card-header" style="border: none; color: orange; background-color: transparent;">
+        <h3>2019/2021</h3>
       </div>
-      <div style="background-color: #028021; height: 100%; color: white;" class="fs-2 fw-bold p-3">
-      <i class="fa-solid fa-code"></i> <span class="mx-3">Boolean</span>
+      <div style="background-color: orange; height: 100%; color: white;" class="fs-2 fw-bold p-3">
+        <i class="fa-sharp fa-solid fa-shield"></i> <span class="mx-3">Ladisa Srl</span>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Jr Full Stack Developer Trainee</h5>
-        <p class="card-text">Il corso intensivo di Boolean della durata di 6 mesi mi ha consentito di
-        mettermi alla prova e di imparare ad utilizzare vari linguaggi di
-        programmazione sviluppando vari progetti come <b>Spotify Web</b> ,
-        <b>Netflix</b> , <b>Whatsapp Web</b> , il sito internet <b>Gliziidisicilia.com</b>  ed altre,
-        visualizzabili sul mio GitHub..</p>
+        <h5 class="card-title">Responsabile Food Safety</h5>
+        <p class="card-text">Gestione operativa del comparto Sicurezza alimentare e Controllo
+          Qualità.</p>
 
       </div>
     </div>
   </div>
+
 </section>
