--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -5,7 +5,7 @@
       <h1 style="color: #004aad;">{{typewriter_display }}</h1>
     </div>
     <div class="col-lg-6 col-12 text-center">
-      <img style="margin-bottom: 50px; max-width: 400px; margin-top: 50px;" class="img-fluid rounded-circle" src="../../assets/img/cv.jpeg" alt="">
+      <img style="margin-bottom: 50px;  margin-top: 50px;" class="img-fluid rounded-circle" src="../../assets/img/cv.jpeg" alt="">
     </div>
   </section>
 </main>
