--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -10,7 +10,7 @@
       <div class="card-content">
         <div class="media">
           <div class="media-content">
-            <h2 class="title is-4 p-2">{{item.title}}</h2>
+            <h2 class="title is-4 p-2"> <a [href]="item.link">{{item.title}}</a> </h2>
           </div>
         </div>
         <div class="content p-2">
