--- a/src/app/me/me.component.html
+++ b/src/app/me/me.component.html
@@ -1,18 +1,19 @@
 <section class="container d-flex justify-content-between align-items-center" style="margin-top: 150px;">
   <div>
     <div class="align-items-center justify-content-center"><img src="../../assets/img/2.png" alt="" width="90" height="90"> <span style="margin-left: 60px;" class="fs-2 fw-bold">About</span></div>
-    <div style="max-width: 490px; margin-top: 50px;">
-      <p>
+    <div style="max-width: 550px; margin-top: 50px;">
+      <p class="fs-4">
         La voglia di mettermi alla prova e la fame di conoscenza mi ha portato a stravolgere completamente la mia vita.
         Ho sempre pensato che per raggiungere i propri obbiettivi servono 3 fattori chiave:</p>
-        <ol>
-          <li>Curiositas = <b>Fame di conoscenza</b></li>
-          <li>Coraggio = <b>Mai aver paura</b> </li>
-          <li>Un pizzico di follia = <b>Senza quella il mondo è troppo grigio</b></li>
+        <ol class="fs-4">
+          <li><b>Curiosità = Fame di conoscenza</b></li>
+          <li><b>Coraggio = Mai aver paura</b></li>
+          <li><b>Un pizzico di follia = Senza quella il mondo è troppo grigio</b></li>
         </ol>
-      <p>
+      <p class="fs-4">
         La mia carriera inizia come Tecnologo Alimentare, mi vede fondare un azienda di consulenza e successivamente ideare un idea di Web App
-        per la gestione del comparto. Da li è amore puro per la programmazione  e per il mondo tech, mi ci butto a capo fitto, e affronto
+        per la gestione del comparto. </p>
+      <p class="fs-4">Da li è amore puro per la programmazione  e per il <b>mondo tech</b> , mi ci butto a capo fitto, e affronto
         percorso formativi altamente professionalizzanti. Ad oggi quel pizzico di follia fa si che io riesca a sviluppare in autonomia siti WEB
         (come questa Landing) e mi sta portando verso una nuova vita e na nuova carriera.
       </p>
