--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,6 +1,6 @@
 <section class="container" style="margin-top: 100px;">
   <div style="margin-bottom: 60px;"><h1>Works</h1></div>
-  <div class="d-flex flex-wrap justify-content-between">
+  <div class="d-flex flex-wrap justify-content-between text-center">
     <div class="card m-2" *ngFor="let item of data">
       <div class="card-image">
         <figure class="image is-4by3">
@@ -13,8 +13,11 @@
             <h2 class="title is-4 p-2"> <a [href]="item.link">{{item.title}}</a> </h2>
           </div>
         </div>
-        <div class="content p-2">
+        <div class="content p-2 fs-4">
           {{item.description}}
+        </div>
+        <div class="p-3">
+          <a href="">{{item.skills}}</a>
         </div>
       </div>
     </div>
