--- a/src/app/me/me.component.html
+++ b/src/app/me/me.component.html
@@ -14,8 +14,8 @@
         La mia carriera inizia come Tecnologo Alimentare, mi vede fondare un azienda di consulenza e successivamente ideare un idea di Web App
         per la gestione del comparto. </p>
       <p class="fs-4">Da li è amore puro per la programmazione  e per il <b>mondo tech</b> , mi ci butto a capo fitto, e affronto
-        percorso formativi altamente professionalizzanti. Ad oggi quel pizzico di follia fa si che io riesca a sviluppare in autonomia siti WEB
-        (come questa Landing) e mi sta portando verso una nuova vita e na nuova carriera.
+        percorsi formativi altamente professionalizzanti. Ad oggi quel pizzico di follia fa si che io riesca a sviluppare in autonomia siti WEB
+        (come questa Landing) e mi sta portando verso una nuova vita e una nuova carriera.
       </p>
     </div>
   </div>
