--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,5 +1,5 @@
 <section class="container" style="margin-bottom: 60px; margin-top: 100px;">
-  <div><h1>Contact</h1></div>
+  <div><h1 >{{titleContact}}</h1></div>
   <div style="margin-top: 70px ;" class="text-center">
     <button class="btn fs-2 fw-bold" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
       aria-controls="offcanvasWithBothOptions" style="border: 1px solid #004aad;">Contattami</button>
