--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -9,8 +9,8 @@
         <i class="fa-solid fa-code"></i> <span class="mx-3">Boolean</span>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Jr Full Stack Developer Trainee</h5>
-        <p class="card-text">Il corso intensivo di Boolean della durata di 6 mesi mi ha consentito di
+        <h3 class="card-title">Jr Full Stack Developer Trainee</h3>
+        <p class="card-text fs-4">Il corso intensivo di Boolean della durata di 6 mesi mi ha consentito di
           mettermi alla prova e di imparare ad utilizzare vari linguaggi di
           programmazione sviluppando vari progetti come <b>Spotify Web</b> ,
           <b>Netflix</b> , <b>Whatsapp Web</b> , il sito internet <b>Gliziidisicilia.com</b> ed altre,
@@ -29,8 +29,8 @@
       <i class="fa-solid fa-building"></i> <span class="mx-3">SEQA Sicurezza e Qualità Agroalimentare</span>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Group CEO SEQA srl</h5>
-        <p class="card-text">Cofondatore della società di consulenza SEQA per il comparto della
+        <h3 class="card-title">Group CEO SEQA srl</h3>
+        <p class="card-text fs-4">Cofondatore della società di consulenza SEQA per il comparto della
         food safety and quality control - mi sono occupato di sviluppare una
         rete di clientela a livello nazionale nel mondo agroalimentare -
         abbiamo ideato e stiamo sviluppando un software per la gestione del
@@ -48,8 +48,8 @@
         <i class="fa-sharp fa-solid fa-shield"></i> <span class="mx-3">Ladisa Srl</span>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Responsabile Food Safety</h5>
-        <p class="card-text">Gestione operativa del comparto Sicurezza alimentare e Controllo
+        <h3 class="card-title">Responsabile Food Safety</h3>
+        <p class="card-text fs-4">Gestione operativa del comparto Sicurezza alimentare e Controllo
           Qualità.</p>
 
       </div>
