--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -17,6 +17,7 @@
           {{item.description}}
         </div>
         <div class="p-3">
+          <h4>Skills</h4>
           <a href="">{{item.skills}}</a>
         </div>
       </div>
