--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,4 +1,8 @@
 <section class="container" style="margin-bottom: 60px; margin-top: 100px;">
+  <div class="my-5">
+    <button class="btn btn-primary fw-bold" *ngIf="router.url === '/Contacts'"><a href="Rosario"
+        style="color: aliceblue; text-decoration: none;">Indietro</a></button>
+  </div>
   <div><h1 >{{titleContact}}</h1></div>
   <div style="margin-top: 70px ;" class="text-center">
     <button class="btn fs-2 fw-bold" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
@@ -20,5 +24,18 @@
         </ul>
       </div>
     </div>
+  </div>
+
+  <div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
   </div>
 </section>
