--- a/src/app/me/me.component.html
+++ b/src/app/me/me.component.html
@@ -1,6 +1,13 @@
 <section class="container d-flex justify-content-between align-items-center" style="margin-top: 150px;">
+
   <div>
-    <div class="align-items-center justify-content-center"><img src="../../assets/img/2.png" alt="" width="90" height="90"> <span style="margin-left: 60px;" class="fs-2 fw-bold">About</span></div>
+    <div class="my-5">
+      <button class="btn btn-primary fw-bold" *ngIf="router.url === '/About'"><a href="Rosario" style="color: aliceblue; text-decoration: none;">Indietro</a></button>
+    </div>
+    <div class="align-items-center justify-content-center"><img src="../../assets/img/2.png" alt="" width="90" height="90">
+      <span style="margin-left: 60px;" class="fs-2 fw-bold">About</span>
+    </div>
+
     <div style="max-width: 550px; margin-top: 50px;">
       <p class="fs-4">
         La voglia di mettermi alla prova e la fame di conoscenza mi ha portato a stravolgere completamente la mia vita.
