--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,4 +1,8 @@
 <section class="container" style="margin-top: 70px;">
+  <div class="my-5">
+    <button class="btn btn-primary fw-bold" *ngIf="router.url === '/Experience'"><a href="Rosario"
+        style="color: aliceblue; text-decoration: none;">Indietro</a></button>
+  </div>
   <div><h1>Experience</h1></div>
   <div class="card" style="border: none; margin-top: 50px;">
     <div class=" align-items-center text-end" style="border: none;">
@@ -55,5 +59,16 @@
       </div>
     </div>
   </div>
-
+<div id="background-wrap">
+  <div class="bubble x1"></div>
+  <div class="bubble x2"></div>
+  <div class="bubble x3"></div>
+  <div class="bubble x4"></div>
+  <div class="bubble x5"></div>
+  <div class="bubble x6"></div>
+  <div class="bubble x7"></div>
+  <div class="bubble x8"></div>
+  <div class="bubble x9"></div>
+  <div class="bubble x10"></div>
+</div>
 </section>
