--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,9 +1,26 @@
 <section class="container" style="margin-top: 100px;">
+
+<div class="my-5">
+  <button class="btn btn-primary fw-bold" *ngIf="router.url === '/Skills'"><a href="Rosario"
+      style="color: aliceblue; text-decoration: none;">Indietro</a></button>
+</div>
   <div><h1>Skills</h1></div>
   <div class="d-flex flex-wrap text-center justify-content-between">
     <div *ngFor="let item of data" class="skills m-2">
       <img [src]="item.img" alt=""  class="img-fluid" style="max-height: 60px;">
       <h4 class="m-2"> {{item.name}}</h4>
     </div>
+  </div>
+  <div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
   </div>
 </section>
