--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,6 +1,10 @@
 <section class="container" style="margin-top: 100px;">
+  <div class="my-5">
+    <button class="btn btn-primary fw-bold" *ngIf="router.url === '/Works'"><a href="Rosario"
+        style="color: aliceblue; text-decoration: none;">Indietro</a></button>
+  </div>
   <div style="margin-bottom: 60px;"><h1>Works</h1></div>
-  <div class="d-flex flex-wrap justify-content-between text-center">
+  <div class="d-flex flex-wrap justify-content-center text-center align-items-center">
     <div class="card m-2" *ngFor="let item of data">
       <div class="card-image">
         <figure class="image is-4by3">
@@ -22,5 +26,17 @@
         </div>
       </div>
     </div>
+  </div>
+  <div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
   </div>
 </section>
